Update page title and links in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Meine coole Seite</title>
+    <title>Marfeyx</title>
     <style>
         html, body {
             margin: 0;
@@ -77,9 +77,9 @@
         <img src="https://github.com/marfeyx.png" alt="Github Profilbild">
         <h1>Willkommen</h1>
         <div class="buttons">
-            <a href="https://google.com" target="_blank">Google</a>
-            <a href="https://github.com" target="_blank">GitHub</a>
-            <a href="https://youtube.com" target="_blank">YouTube</a>
+            <a href="https://github.com/marfeyx/CS2-Case-Simulator" target="_blank">Case Simulator Project</a>
+            <a href="https://github.com/marfeyx" target="_blank">GitHub</a>
+            <a href="https://youtube.com/marfeyx" target="_blank">YouTube</a>
         </div>
     </div>
 
