Replace YouTube link with Shop link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="buttons">
             <a href="https://github.com/marfeyx/CS2-Case-Simulator" target="_blank">Case Simulator Project</a>
             <a href="https://github.com/marfeyx" target="_blank">GitHub</a>
-            <a href="https://youtube.com/marfeyx" target="_blank">YouTube</a>
+            <a href="https://ultimate-marshop.mysellauth.com/" target="_blank">Shop</a>
         </div>
     </div>
 
