Change heading from 'Willkommen' to 'My Links'

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
     <div class="center-box">
         <img src="https://github.com/marfeyx.png" alt="Github Profilbild">
-        <h1>Willkommen</h1>
+        <h1>My Links</h1>
         <div class="buttons">
-            <a href="https://github.com/marfeyx/CS2-Case-Simulator" target="_blank">Case Simulator Project</a>
             <a href="https://github.com/marfeyx" target="_blank">GitHub</a>
+            <a href="https://github.com/marfeyx/CS2-Case-Simulator" target="_blank">Case Simulator Project</a>
             <a href="https://ultimate-marshop.mysellauth.com/" target="_blank">Shop</a>
         </div>
     </div>
