Adjust box positions and update comments in HTML

--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 
         /* Spezifische Positionen für die beiden Boxen */
         #links-box {
-            top: 30%;
+            top: 25%;
         }
 
         #tasks-box {
-            top: 60%;
+            top: 55%;
         }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
 
-    <!-- Erste Box -->
+    <!-- Links Box -->
     <div class="center-box" id="links-box">
         <img src="https://github.com/marfeyx.png" alt="Github Profilbild">
         <h1>My Links</h1>
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <!-- Neue Tasks Box -->
+    <!-- Tasks Box -->
     <div class="center-box" id="tasks-box">
         <h1>Tasks</h1>
         <div class="buttons">
