Update project links and descriptions in projects.html

--- a/projects.html
+++ b/projects.html
@@ -26,27 +26,27 @@
 				<p class="card-subtitle">Some projects i've previously worked on.</p>
 				<nav class="button-stack" aria-label="Project links">
 					<a
-						href="https://example.com/atlas-dashboard"
+						href="https://github.com/marfeyx/CS2-Case-Simulator"
 						class="link-button"
 						data-link-button
 						data-title="CS2 Simulator"
 						data-description="This is a small console application in C# that I worked on a few months ago that lets you unbox Counter Strike 2 cases and simulate rewards, the project is bloated and is unfinished. I am currently working on a new, better version."
 						target="_blank"
 						rel="noopener noreferrer"
-						>CS2 Case Opening Simulator Unfinished</a
+						>CS2 Case Opening Simulator</a
 					>
 					<a
-						href="https://example.com/signal-lamp"
+						href="https://github.com/marfeyx/Tonys-Elektro-Schuppen"
 						class="link-button"
 						data-link-button
 						data-title="Signal Lamp"
-						data-description="A simple website project I made in school. This was my first real project for a website including HTML, CSS and JS. The website dynamically loads products from an API."
+						data-description="A simple website project I made at school. This was my first real project for a website including HTML, CSS and JS. The website dynamically loads products from an API."
 						target="_blank"
 						rel="noopener noreferrer"
 						>Tonys Elektro Schuppen</a
 					>
 					<a
-						href="https://example.com/modular-synth"
+						href="https://www.nexusmods.com/schedule1/mods/480"
 						class="link-button"
 						data-link-button
 						data-title="Schedule 1 Steam Mod"
@@ -54,26 +54,6 @@
 						target="_blank"
 						rel="noopener noreferrer"
 						>Schedule 1 Mod</a
-					>
-					<a
-						href="https://example.com/client-archive"
-						class="link-button"
-						data-link-button
-						data-title="Client Work Archive"
-						data-description="Client Work Archive catalogs select brand collaborations from the past five years."
-						target="_blank"
-						rel="noopener noreferrer"
-						>Client Work Archive</a
-					>
-					<a
-						href="https://example.com/playground"
-						class="link-button"
-						data-link-button
-						data-title="Playground Experiments"
-						data-description="Playground Experiments is where prototypes land before they become real."
-						target="_blank"
-						rel="noopener noreferrer"
-						>Playground Experiments</a
 					>
 				</nav>
 			</section>
