Fix social media links and update descriptions
Updated social media links and descriptions.

--- a/socials.html
+++ b/socials.html
@@ -36,7 +36,7 @@
 						>GitHub</a
 					>
 					<a
-						href="https://www.youtube.com/marfeyx"
+						href="https://www.youtube.com/@marfeyx"
 						class="link-button"
 						data-link-button
 						data-title="Youtube Account"
@@ -46,17 +46,17 @@
 						>Youtube</a
 					>
 					<a
-						href="DCLINK"
+						href="https://discord.gg/7uvs8A89Ys"
 						class="link-button"
 						data-link-button
 						data-title="Friend me on Discord"
-						data-description="Add me on Discord to ask questions, give tips or just to talk to me."
+						data-description="Join my Discord server to talk to me."
 						target="_blank"
 						rel="noopener noreferrer"
 						>Discord</a
 					>
 					<a
-						href="STEAMLINK"
+						href="https://steamcommunity.com/id/marfeyx/"
 						class="link-button"
 						data-link-button
 						data-title="Steam Account"
