--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Link Hub · Home</title>
+		<title>Marfeyx</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -18,7 +18,7 @@
 		<main class="site-shell">
 			<section class="link-card" data-card>
 				<img
-					src="profilbild.png"
+					src="https://github.com/marfeyx.png"
 					alt="Profile"
 					class="profile-photo"
 				/>
