--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,16 @@
 						rel="noopener noreferrer"
 						>Schedule 1 Mod</a
 					>
+					<a
+						href="https://ultimate-marshop.mysellauth.com/"
+						class="link-button"
+						data-link-button
+						data-title="My Onlineshop"
+						data-description="My onlineshop selling in-game goods for various games, cheap steam keys or even promotions for your own shop."
+						target="_blank"
+						rel="noopener noreferrer"
+						>My Shop</a
+					>
 				</nav>
 			</section>
 			<aside class="info-panel" data-info-panel>
