--- a/socials.html
+++ b/socials.html
@@ -46,16 +46,6 @@
 						>Youtube</a
 					>
 					<a
-						href="https://discord.gg/7uvs8A89Ys"
-						class="link-button"
-						data-link-button
-						data-title="Friend me on Discord"
-						data-description="Join my Discord server to talk to me."
-						target="_blank"
-						rel="noopener noreferrer"
-						>Discord</a
-					>
-					<a
 						href="https://steamcommunity.com/id/marfeyx/"
 						class="link-button"
 						data-link-button
@@ -64,6 +54,16 @@
 						target="_blank"
 						rel="noopener noreferrer"
 						>Steam</a
+					>
+					<a
+						href=""
+						class="link-button"
+						data-link-button
+						data-title="Discord: Marfeyx"
+						data-description="Add me on discord to ask questions or talk to me."
+						target="_blank"
+						rel="noopener noreferrer"
+						>Discord: Marfeyx</a
 					>
 				</nav>
 			</section>
