Change project title from 'Signal Lamp' to 'Fake Online Shop'

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 						href="https://github.com/marfeyx/Tonys-Elektro-Schuppen"
 						class="link-button"
 						data-link-button
-						data-title="Signal Lamp"
+						data-title="Fake Online Shop"
 						data-description="A simple website project I made at school. This was my first real project for a website including HTML, CSS and JS. The website dynamically loads products from an API."
 						target="_blank"
 						rel="noopener noreferrer"
