Update profile image source in socials.html

--- a/socials.html
+++ b/socials.html
@@ -18,8 +18,8 @@
 		<main class="site-shell">
 			<section class="link-card" data-card>
 				<img
-					src="profilbild.png"
-					alt="Profile portrait"
+					src="https://github.com/marfeyx.png"
+					alt="Profile"
 					class="profile-photo"
 				/>
 				<h1>Socials</h1>
